hphp/hack/test/full_fidelity/cases/concurrent/error/concurrent_reuse_lval_4.php
<?hh

async function f() {
  concurrent {
    await genx($x .= 'foo');
    await genx($x);
  }
}
